--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ email-validator = "*"
 flask-debugtoolbar = "*"
 flask-mail = "*"
 waitress = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
+flask-wtf = "*"
 
 [dev-packages]
 
